ocaml-batteries (0.20081111-1) UNRELEASED; urgency=low

  * new snapshot, now following upstream Git
    (commit fed989b, i.e., alpha 2)
  * debian/patches:
    - remote patch features/flexi-build (integrated upstream)
  * debian/control: correct spelling of "metapackage"
  * debian/control: fix sections: -dev in libdevel, -doc in doc

 -- Stefano Zacchiroli <zack@debian.org>  Mon, 13 Oct 2008 22:11:31 +0200

ocaml-batteries (0.20081011-1) experimental; urgency=low

  * Initial release (Closes: #501914)

 -- Stefano Zacchiroli <zack@debian.org>  Mon, 13 Oct 2008 18:55:31 +0200