@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/makefile.mk
+include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 include /usr/share/cdbs/1/class/ocaml.mk
 
@@ -9,7 +9,10 @@ DEV_PKG_NAME = lib$(LIB_NAME)-ocaml-dev
 DOC_PKG_NAME = lib$(LIB_NAME)-ocaml-doc
 DEST_DIR = $(CURDIR)/debian/$(DEV_PKG_NAME)$(OCAML_STDLIB_DIR)
 
-DEB_MAKE_BUILD_TARGET = byte
+DEB_CONFIGURE_EXTRA_FLAGS = --with-browser="x-www-browser %s"
+DEB_CONFIGURE_EXTRA_FLAGS += --with-docroot="/usr/share/doc/$(DEV_PKG_NAME)"
+
+DEB_MAKE_BUILD_TARGET = all
 ifeq ($(OCAML_HAVE_OCAMLOPT),yes)
 DEB_MAKE_BUILD_TARGET += opt
 endif
