@@ -6,6 +6,7 @@ ocaml-batteries (0.20081111-1) UNRELEASED; urgency=low
     - remote patch features/flexi-build (integrated upstream)
   * debian/control: correct spelling of "metapackage"
   * debian/control: fix sections: -dev in libdevel, -doc in doc
+  * debian/rules: port to new upstream, which is now using autotools
 
  -- Stefano Zacchiroli <zack@debian.org>  Mon, 13 Oct 2008 22:11:31 +0200
 
